--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.2",
     "react-cloud-vision-api": "^0.3.0",
