--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-simple-chatbot": "^0.6.1",
+    "react-webcam": "^6.0.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
